Fixed subheading spacing to line up on the right side in large-vew.

--- a/scss/base-units/_atoms.scss
+++ b/scss/base-units/_atoms.scss
@@ -68,7 +68,7 @@ h2 {
   @include mixins.breakpoint(large) {
     & {
       font-size: 3rem;
-      margin-left: 7rem;
+      margin-left: 6.25rem;
     }
   }
 }
