--- a/style.css
+++ b/style.css
@@ -369,7 +369,7 @@ h2 {
 @media only screen and (min-width: 1175px) {
   h2 {
     font-size: 3rem;
-    margin-left: 7rem;
+    margin-left: 6.25rem;
   }
 }
 
